src/objects/LnP_License_Type_Sections_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Application_Method__c</fullName>
        <label>Application Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sections__c</fullName>
        <label>Sections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>flag__c</fullName>
        <label>flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LnP License Type Sections Setting</label>
    <pluralLabel>LnP License Type Sections Settings</pluralLabel>
</CustomObject>